--- a/paquescolar-web/src/main/webapp/app/comunes/dialogos/proveedor/filtroProveedor.xhtml
+++ b/paquescolar-web/src/main/webapp/app/comunes/dialogos/proveedor/filtroProveedor.xhtml
@@ -21,8 +21,8 @@
             <p:growl id="growl1" showDetail="true" escape="false">
                 <p:autoUpdate />
             </p:growl>
-            <p:panel>
-                <h:panelGrid columns="4" >
+            <p:panel style="height: 456px;" >
+                <h:panelGrid columns="3" >
                     <h:outputText value="Valor de busqueda:"/>
                     <p:inputText value="#{busquedaProveedorMB.valor}" styleClass="textMayuscula" size="40"/>
                     <h:outputText value="(NIT o Nombre o Representante Legal)"/>
