Se agregó leyenda de versión para identificarla

--- a/paquescolar-web/src/main/webapp/index.xhtml
+++ b/paquescolar-web/src/main/webapp/index.xhtml
@@ -118,7 +118,7 @@
 
                             <div class="ui-g-12">
                                 <div class="ui-g-4" style="height: 50px;">
-                                    <h:outputText value="versión #{catalogosGeneralesController.version}" style="font-size: 14px; font-family: 'Bembo Std'"/>
+                                    <h:outputText value="versión 05Nov2022_1033h #{catalogosGeneralesController.version}" style="font-size: 14px; font-family: 'Bembo Std'"/>
                                 </div>
                                 <div class="ui-g-8" style="text-align: right;">
                                     <p:ajaxStatus>
