--- a/paquescolar-web/src/main/webapp/app/reg02Contrato.xhtml
+++ b/paquescolar-web/src/main/webapp/app/reg02Contrato.xhtml
@@ -87,8 +87,11 @@
                                 <p:calendar id="cldFechaContrato" pattern="dd/MM/yyyy" size="12" disabled="#{contratosOrdenesComprasController.deshabilitado}" value="#{contratosOrdenesComprasController.selected.fechaEmision}" locale="es" showOn="button" navigator="true"/>
                                 <p:outputLabel value="Fecha Orden Inicio: " for="cldOrdenInicio" rendered="#{contratosOrdenesComprasController.showFechaOrdenInicio}" />
                                 <p:calendar id="cldOrdenInicio" pattern="dd/MM/yyyy" size="12" navigator="true" disabled="#{contratosOrdenesComprasController.deshabilitado}" value="#{contratosOrdenesComprasController.selected.fechaOrdenInicio}" rendered="#{contratosOrdenesComprasController.showFechaOrdenInicio}" locale="es"/>
-                                <p:outputLabel value="Plazo de entrega: " for="txtPlazo"/>
-                                <p:inputText id="txtPlazo" size="3" maxlength="2" readonly="true" onkeypress="soloNumeros(event);" disabled="#{contratosOrdenesComprasController.deshabilitado}" value="#{contratosOrdenesComprasController.selected.plazoPrevistoEntrega}"/>
+                                
+                                <!--comentado por que en año 2023 no se usa-->
+<!--                                <p:outputLabel value="Plazo de entrega: " for="txtPlazo"/>
+                                <p:inputText id="txtPlazo" size="3" maxlength="2" readonly="true" onkeypress="soloNumeros(event);" disabled="#{contratosOrdenesComprasController.deshabilitado}" value="#{contratosOrdenesComprasController.selected.plazoPrevistoEntrega}"/>-->
+                                
                             </p:panelGrid>
 
                             <p:panelGrid columns="2" columnClasses="col2_label,col10"
