--- a/paquescolar-web/src/main/webapp/app/reg02EstadisticaCenso.xhtml
+++ b/paquescolar-web/src/main/webapp/app/reg02EstadisticaCenso.xhtml
@@ -875,8 +875,9 @@
                         <p:selectBooleanCheckbox value="#{estadisticasCensoController.utiles}"/>
                         <p:outputLabel value="Zapatos escolares"/>
                         <p:selectBooleanCheckbox value="#{estadisticasCensoController.zapatos}"/>
-                        <p:outputLabel value="Declaración Jurada"/>
-                        <p:selectBooleanCheckbox value="#{estadisticasCensoController.declaracion}"/>
+                        <!--Se comentó por que no sería utilizado 07 Nov 2022 10:53 a.m.-->
+<!--                        <p:outputLabel value="Declaración Jurada"/>
+                        <p:selectBooleanCheckbox value="#{estadisticasCensoController.declaracion}"/>-->
                     </h:panelGrid>
                 </p:panel>
                 <f:facet name="footer">
