--- a/paquescolar-web/src/main/webapp/app/reg02EstadisticaCenso.xhtml
+++ b/paquescolar-web/src/main/webapp/app/reg02EstadisticaCenso.xhtml
@@ -841,8 +841,8 @@
                                     <p:inputText size="5" readonly="true" value="#{estadisticasCensoController.entidadEducativa.inicialesModalidad}" disabled="true}"/>
                                     <p:spacer width="10"/>
                                     <p:spacer width="10"/>
-                                    <h:outputText value="Encargado de Compras: "/>
-                                    <p:inputText style="width: 100%;" value="#{estadisticasCensoController.nombreEncargadoCompras}" />
+<!--                                    <h:outputText value="Encargado de Compras: "/>
+                                    <p:inputText style="width: 100%;" value="#{estadisticasCensoController.nombreEncargadoCompras}" />-->
                                 </p:panelGrid>
 
                                 <p:separator />
@@ -855,7 +855,7 @@
                                 <p:separator />
 
                                 <p:panelGrid id="pngConsejal" columns="2" layout="grid" styleClass="ui-panelgrid-blank form-group" columnClasses="ui-grid-col-2,ui-grid-col-10">
-                                    <h:outputText value="Consejal docente"/>
+                                    <h:outputText value="Encargado de Compras: "/>                                    
                                     <p:inputText style="width: 100%;" value="#{estadisticasCensoController.nombreConsejal}" disabled="#{!estadisticasCensoController.editDirector}"/>                                    
                                 </p:panelGrid>
                             </p:tab>
