Cambios a último momento

--- a/paquescolar-web/src/main/webapp/app/reg02EstadisticaCenso.xhtml
+++ b/paquescolar-web/src/main/webapp/app/reg02EstadisticaCenso.xhtml
@@ -876,8 +876,8 @@
                         <p:outputLabel value="Zapatos escolares"/>
                         <p:selectBooleanCheckbox value="#{estadisticasCensoController.zapatos}"/>
                         <!--Se comentó por que no sería utilizado 07 Nov 2022 10:53 a.m.-->
-<!--                        <p:outputLabel value="Declaración Jurada"/>
-                        <p:selectBooleanCheckbox value="#{estadisticasCensoController.declaracion}"/>-->
+                        <p:outputLabel value="Declaración Jurada"/>
+                        <p:selectBooleanCheckbox value="#{estadisticasCensoController.declaracion}"/>
                     </h:panelGrid>
                 </p:panel>
                 <f:facet name="footer">
