Cambios en las siguientes clases, para incluir DUI y rubro contratación Constantes.QUERY_CONTRATACION_RESUMEN_CONTRATACIONES
/paquescolar-model/src/main/java/sv/gob/mined/paquescolar/model/pojos/VwRptProveedoresContratadosDto.java
private String numeroDui;
private String descripcionRubro;

/paquescolar-model/src/main/resources/META-INF/nativeQueries.xml
Ejecucion.ResumenContratacionesByProcesoAndDepa

/paquescolar-web/src/main/webapp/app/rpt03ResumenContrataciones.xhtml

--- a/paquescolar-web/src/main/webapp/app/rpt03ResumenContrataciones.xhtml
+++ b/paquescolar-web/src/main/webapp/app/rpt03ResumenContrataciones.xhtml
@@ -132,6 +132,16 @@
                                         <f:convertDateTime pattern="dd/MM/yyyy"/>
                                     </p:outputLabel>
                                 </p:column>
+                                <p:column headerText="DUI">
+                                    <p:outputLabel value="#{prov.numeroDui}">
+                                        <f:convertDateTime pattern="dd/MM/yyyy"/>
+                                    </p:outputLabel>
+                                </p:column>
+                                <p:column headerText="Descripción Rubro">
+                                    <p:outputLabel value="#{prov.descripcionRubro}">
+                                        <f:convertDateTime pattern="dd/MM/yyyy"/>
+                                    </p:outputLabel>
+                                </p:column>
 
                                 <p:summaryRow>
                                     <p:column colspan="10" style="text-align:right">
